@@ -1,3 +1,8 @@
+2013-01-14  Felix Ingrand  <felix@precise>
+
+	* slistPack.c (sl_make_snode): remove the test on node==NULL... I
+	use it myself too often.
+
 2013-01-12  Felix Ingrand  <felix@precise>
 
 	* slistPack.c (sl_get_from_tail): Trying to nail down MW
